--- a/index.html
+++ b/index.html
@@ -13,19 +13,9 @@
       display:flex;flex-direction:column;align-items:center;justify-content:center;}
     h1 {margin:0 0 16px;text-align:center;font-size:2em;}
     .bar {display:flex;gap:10px;margin-bottom:12px;width:100%;justify-content:center;}
-    .bar input {flex:1;padding:12px;border-radius:8px;border:1px solid #444;
-      background:#1b1b1b;color:#fff;max-width:400px;}
+    .bar input {flex:1;padding:12px;border-radius:8px;border:1px solid #444;background:#1b1b1b;color:#fff;max-width:400px;}
     .bar button {padding:12px;border-radius:8px;border:none;background:#ff5ca8;color:#fff;cursor:pointer;}
-    .tabs {display:flex;gap:8px;flex-wrap:wrap;margin:12px 0;justify-content:center;}
-    .tabs button {padding:8px 12px;border-radius:6px;background:#333;color:#fff;border:none;cursor:pointer;}
-    .tabs button.active {background:#ff5ca8;}
     #content {margin-top:16px;width:100%;}
-    .item {margin-bottom:12px;display:flex;align-items:center;gap:10px;}
-    .item img {width:24px;height:24px;object-fit:contain;}
-    .item a {color:#fff;text-decoration:none;font-weight:bold;}
-    .item a:hover {text-decoration:underline;}
-    .photo-grid {display:grid;grid-template-columns:repeat(auto-fill,minmax(150px,1fr));gap:10px;}
-    .photo-grid img {width:100%;height:120px;object-fit:cover;border-radius:8px;background:#222;}
   </style>
 </head>
 <body>
@@ -34,125 +24,29 @@
     <div class="bg-half"></div>
   </div>
   <div class="card">
-    <div id="home">
-      <h1>Searchmas 🎅🎄</h1>
-      <div class="bar">
-        <input id="q" type="text" placeholder="Search…">
-        <button id="go">Search</button>
-      </div>
+    <h1>Searchmas 🎅🎄</h1>
+    <div class="bar">
+      <input id="q" type="text" placeholder="Search…">
+      <button id="go">Search</button>
     </div>
-    <div id="results" style="display:none;">
-      <div class="bar">
-        <input id="qTop" type="text" placeholder="Search…">
-        <button id="goTop">Go</button>
-        <button id="back">Back</button>
-      </div>
-      <div class="tabs">
-        <button id="tabWeb" class="active">Web</button>
-        <button id="tabImages">Images</button>
-        <button id="tabVideos">Videos</button>
-        <button id="tabNews">News</button>
-        <button id="tabDiscuss">Discuss</button>
-      </div>
-      <div id="content"></div>
-    </div>
+    <div id="content"></div>
   </div>
   <script>
-    const home=document.getElementById('home');
-    const results=document.getElementById('results');
     const q=document.getElementById('q');
-    const qTop=document.getElementById('qTop');
     const content=document.getElementById('content');
-    const tabs=['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'];
+    document.getElementById('go').addEventListener('click', doSearch);
+    q.addEventListener('keydown', e=>{if(e.key==='Enter') doSearch();});
 
-    document.getElementById('go').addEventListener('click', enterResults);
-    q.addEventListener('keydown', e=>{if(e.key==='Enter') enterResults();});
-    document.getElementById('goTop').addEventListener('click', refreshActive);
-    qTop.addEventListener('keydown', e=>{if(e.key==='Enter') refreshActive();});
-    document.getElementById('back').addEventListener('click', ()=>{results.style.display='none';home.style.display='block';qTop.value='';});
-
-    tabs.forEach(id=>{
-      document.getElementById(id).addEventListener('click', ()=>{setActive(id);refreshActive();});
-    });
-
-    function getQuery(){return (qTop.value.trim()||q.value.trim());}
-    function setActive(id){tabs.forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
-    function activeTab(){return tabs.find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
-
-    function enterResults(){
-      const query=getQuery();
+    function doSearch(){
+      const query=q.value.trim();
       if(!query){alert("Type something to search");return;}
-      home.style.display='none';
-      results.style.display='block';
-      qTop.value=query;
-      showWeb();
-    }
-
-    function refreshActive(){
-      const id=activeTab();
-      if(id==='tabWeb') showWeb();
-      else if(id==='tabImages') showImages();
-      else if(id==='tabVideos') showVideos();
-      else if(id==='tabNews') showNews();
-      else if(id==='tabDiscuss') showDiscuss();
-    }
-
-    function item(label,url,iconUrl){
-      const icon=iconUrl||('https://www.google.com/s2/favicons?domain='+new URL(url).hostname);
-      return `<div class="item"><img src="${icon}" alt=""><a href="${url}" target="_blank">${label}</a></div>`;
-    }
-
-    function showWeb(){
-      const query=getQuery();
-      if(!query) return;
-      setActive('tabWeb');
       content.innerHTML=
-        item('Google: '+query,'https://www.google.com/search?q='+encodeURIComponent(query))+
-        item('ChatGPT: '+query,'https://chat.openai.com/?q='+encodeURIComponent(query))+
-        item('Gemini: '+query,'https://gemini.google.com/app/search?q='+encodeURIComponent(query));
-    }
-
-    async function showImages(){
-      const query=getQuery();
-      if(!query) return;
-      setActive('tabImages');
-      try{
-        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
-        const data=await res.json();
-        let html='<div class="photo-grid">';
-        (data.results||[]).forEach(img=>{
-          html+=`<a href="${img.links.html}" target="_blank"><img src="${img.urls.small}" alt="${query}"></a>`;
-        });
-        html+='</div>';
-        content.innerHTML=html||'<p>No images found.</p>';
-      }catch{content.innerHTML='<p>Could not load images.</p>';}
-    }
-
-    function showVideos(){
-      const query=getQuery();
-      if(!query) return;
-      setActive('tabVideos');
-      content.innerHTML=
-        item('YouTube: '+query,'https://www.youtube.com/results?search_query='+encodeURIComponent(query))+
-        item('Bing Videos: '+query,'https://www.bing.com/videos/search?q='+encodeURIComponent(query));
-    }
-
-    function showNews(){
-      const query=getQuery();
-      if(!query) return;
-      setActive('tabNews');
-      content.innerHTML=
-        item('Google News: '+query,'https://news.google.com/search?q='+encodeURIComponent(query))+
-        item('Bing News: '+query,'https://www.bing.com/news/search?q='+encodeURIComponent(query));
-    }
-
-    function showDiscuss(){
-      const query=getQuery();
-      if(!query) return;
-      setActive('tabDiscuss');
-      content.innerHTML=
-        item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query))+
-        item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query));
+        `<p>Showing results for <b>${query}</b>:</p>
+         <ul>
+           <li><a href="https://www.google.com/search?q=${encodeURIComponent(query)}" target="_blank">Google</a></li>
+           <li><a href="https://chat.openai.com/?q=${encodeURIComponent(query)}" target="_blank">ChatGPT</a></li>
+           <li><a href="https://gemini.google.com/app/search?q=${encodeURIComponent(query)}" target="_blank">Gemini</a></li>
+         </ul>`;
     }
   </script>
 </body>
