--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .item img {width:24px;height:24px;object-fit:contain;background:#fff;border-radius:50%;padding:4px;}
     .item a {color:#fff;text-decoration:none;font-weight:bold;}
     .item a:hover {text-decoration:underline;}
-    .photo-grid {display:grid;grid-template-columns:repeat(auto-fill,minmax(150px,1fr));gap:10px;}
+    .photo-grid {display:grid;grid-template-columns:repeat(4,1fr);gap:10px;}
     .photo-grid img {width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;background:#222;}
   </style>
 </head>
@@ -116,7 +116,7 @@
       if(!query) return;
       setActive('tabImages');
       let html='<div class="photo-grid">';
-      for(let i=0;i<9;i++){
+      for(let i=0;i<12;i++){
         html+=`<img src="https://source.unsplash.com/300x300/?${encodeURIComponent(query)}&sig=${i}" alt="${query}">`;
       }
       html+='</div>';
