--- a/index.html
+++ b/index.html
@@ -8,33 +8,31 @@
     html,body {height:100%;margin:0;font-family:sans-serif;color:#fff;}
     .bg-split {position:fixed;inset:0;display:flex;}
     .bg-half {flex:1;background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;}
-    .card {position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-      width:min(800px,95%);padding:20px;background:rgba(0,0,0,0.75);border-radius:16px;
-      display:flex;flex-direction:column;align-items:center;justify-content:center;}
+    .card {
+      position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+      width:min(800px,95%);padding:20px;background:rgba(0,0,0,0.8);border-radius:16px;
+      display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
+    }
     h1 {margin:0 0 16px;text-align:center;font-size:2em;}
     .bar {display:flex;gap:10px;margin-bottom:12px;width:100%;justify-content:center;}
-    .bar input {flex:1;padding:12px;border-radius:8px;border:1px solid #444;background:#1b1b1b;color:#fff;max-width:400px;}
+    .bar input {flex:1;padding:12px;border-radius:8px;border:1px solid #444;background:#1b1b1b;color:#fff;max-width:420px;}
     .bar button {padding:12px;border-radius:8px;border:none;background:#ff5ca8;color:#fff;cursor:pointer;}
-    .tabs {display:flex;gap:8px;flex-wrap:wrap;margin:12px 0;justify-content:center;}
+    .tabs {display:flex;gap:8px;flex-wrap:wrap;margin:12px 0;justify-content:center;width:100%;}
     .tabs button {padding:8px 12px;border-radius:6px;background:#333;color:#fff;border:none;cursor:pointer;}
     .tabs button.active {background:#ff5ca8;}
-    #content {margin-top:16px;width:100%;}
+    #content {
+      margin-top:8px;width:100%;
+      max-height:420px;overflow-y:auto; /* keeps search box + tabs visible */
+    }
     .item {margin-bottom:12px;display:flex;align-items:center;gap:10px;}
     .item img {width:24px;height:24px;object-fit:contain;background:#fff;border-radius:50%;padding:4px;}
     .item a {color:#fff;text-decoration:none;font-weight:bold;}
     .item a:hover {text-decoration:underline;}
     .photo-grid {
-      display:grid;
-      grid-template-columns:repeat(4, 1fr);
-      gap:10px;
-      justify-items:center;
+      display:grid;grid-template-columns:repeat(4,1fr);gap:10px;justify-items:center;
     }
     .photo-grid img {
-      width:150px;
-      height:150px;
-      object-fit:cover;
-      border-radius:8px;
-      background:#222;
+      width:120px;height:120px;object-fit:cover;border-radius:8px;background:#222;
     }
   </style>
 </head>
@@ -43,6 +41,7 @@
     <div class="bg-half"></div>
     <div class="bg-half"></div>
   </div>
+
   <div class="card">
     <div id="home">
       <h1>Searchmas 🎅🎄</h1>
@@ -51,7 +50,8 @@
         <button id="go">Search</button>
       </div>
     </div>
-    <div id="results" style="display:none;">
+
+    <div id="results" style="display:none;width:100%;">
       <div class="bar">
         <input id="qTop" type="text" placeholder="Search…">
         <button id="goTop">Go</button>
@@ -67,19 +67,24 @@
       <div id="content"></div>
     </div>
   </div>
+
   <script>
     const home=document.getElementById('home');
     const results=document.getElementById('results');
     const q=document.getElementById('q');
     const qTop=document.getElementById('qTop');
     const content=document.getElementById('content');
+
     const tabs=['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'];
+    const bingIcon='https://www.bing.com/sa/simg/favicon-trans-bg-blue-mg.ico';
 
     document.getElementById('go').addEventListener('click', enterResults);
     q.addEventListener('keydown', e=>{if(e.key==='Enter') enterResults();});
     document.getElementById('goTop').addEventListener('click', refreshActive);
     qTop.addEventListener('keydown', e=>{if(e.key==='Enter') refreshActive();});
-    document.getElementById('back').addEventListener('click', ()=>{results.style.display='none';home.style.display='block';qTop.value='';});
+    document.getElementById('back').addEventListener('click', ()=>{
+      results.style.display='none';home.style.display='block';qTop.value='';
+    });
 
     tabs.forEach(id=>{
       document.getElementById(id).addEventListener('click', ()=>{setActive(id);refreshActive();});
@@ -113,53 +118,56 @@
     }
 
     function showWeb(){
-      const query=getQuery();
-      if(!query) return;
+      const query=getQuery(); if(!query) return;
       setActive('tabWeb');
-      content.innerHTML=
+      content.innerHTML =
         item('Google: '+query,'https://www.google.com/search?q='+encodeURIComponent(query),'https://www.google.com/s2/favicons?domain=google.com')+
         item('ChatGPT: '+query,'https://chat.openai.com/?q='+encodeURIComponent(query),'https://chat.openai.com/favicon.ico')+
         item('Gemini: '+query,'https://gemini.google.com/app/search?q='+encodeURIComponent(query),'https://www.google.com/s2/favicons?domain=gemini.google.com')+
-        item('Bing Search: '+query,'https://www.bing.com/search?q='+encodeURIComponent(query),'https://www.bing.com/sa/simg/favicon-trans-bg-blue-mg.ico');
+        item('Bing Search: '+query,'https://www.bing.com/search?q='+encodeURIComponent(query),bingIcon);
     }
 
     async function showImages(){
-      const query=getQuery();
-      if(!query) return;
+      const query=getQuery(); if(!query) return;
       setActive('tabImages');
       try{
         const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
         const data=await res.json();
         let html='<div class="photo-grid">';
-        (data.results||[]).forEach(img=>{
+        (data.results||[]).slice(0,12).forEach(img=>{
           html+=`<a href="${img.links.html}" target="_blank"><img src="${img.urls.small}" alt="${query}"></a>`;
         });
         html+='</div>';
-        content.innerHTML=html||'<p>No images found.</p>';
-      }catch{content.innerHTML='<p>Could not load images.</p>';}
+        content.innerHTML=html || '<p>No images found.</p>';
+      }catch{
+        content.innerHTML='<p>Could not load images.</p>';
+      }
     }
 
     function showVideos(){
-      const query=getQuery();
-      if(!query) return;
+      const query=getQuery(); if(!query) return;
       setActive('tabVideos');
-      content.innerHTML=
+      content.innerHTML =
         item('YouTube: '+query,'https://www.youtube.com/results?search_query='+encodeURIComponent(query))+
-        item('Bing Videos: '+query,'https://www.bing.com/videos/search?q='+encodeURIComponent(query),'https://www.bing.com/sa/simg/favicon-trans-bg-blue-mg.ico');
+        item('Bing Videos: '+query,'https://www.bing.com/videos/search?q='+encodeURIComponent(query),bingIcon);
     }
 
     function showNews(){
-      const query=getQuery();
-      if(!query) return;
+      const query=getQuery(); if(!query) return;
       setActive('tabNews');
-      content.innerHTML=
+      content.innerHTML =
         item('Google News: '+query,'https://news.google.com/search?q='+encodeURIComponent(query),'https://www.gstatic.com/images/branding/product/2x/news_96dp.png')+
-        item('Bing News: '+query,'https://www.bing.com/news/search?q='+encodeURIComponent(query),'https://www.bing.com/sa/simg/favicon-trans-bg-blue-mg.ico');
+        item('Bing News: '+query,'https://www.bing.com/news/search?q='+encodeURIComponent(query),bingIcon);
     }
 
     function showDiscuss(){
-      const query=getQuery();
-      if(!query) return;
+      const query=getQuery(); if(!query) return;
       setActive('tabDiscuss');
-      content.innerHTML=
-        item('Reddit: '+query
+      content.innerHTML =
+        item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query))+
+        item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query))+
+        item('Bing Search: '+query,'https://www.bing.com/search?q='+encodeURIComponent(query),bingIcon);
+    }
+  </script>
+</body>
+</html>
