--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ body {
 .search-box {
   width: 100%;
   max-width: 580px;
-  margin-top: 20px;
   padding: 0 16px;
 }
 
@@ -115,7 +114,7 @@ input:focus { outline: none }
 
 .content { margin-top: 20px }
 
-/* AI BOX */
+/* AI */
 #aiBox {
   max-width: 720px;
   font-size: 16px;
@@ -157,168 +156,4 @@ input:focus { outline: none }
   display: inline-flex;
   align-items: center;
   gap: 12px;
-  padding: 12px 18px;
-  font-size: 20px;
-  border: 1px solid #dadce0;
-  border-radius: 24px;
-  cursor: pointer;
-}
-.news-btn img {
-  width: 36px;
-  height: 36px;
-}
-
-/* FLIGHTS */
-.flight-frame {
-  width: 100%;
-  height: 600px;
-  border: none;
-}
-
-/* MOBILE */
-@media (max-width: 768px) {
-  body {
-    background: url('Santa.png') center center / cover no-repeat;
-  }
-}
-</style>
-</head>
-
-<body>
-
-<div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
-  <div class="search-box">
-    <input id="qHome" placeholder="Search or type a URL">
-  </div>
-</div>
-
-<div id="results">
-  <div class="topbar">
-    <div class="back" onclick="goHome()">⬅</div>
-    <div class="small-logo">
-      <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
-    </div>
-    <input id="qTop">
-  </div>
-
-  <div class="tabs">
-    <div class="tab" data-tab="ai">AI Mode</div>
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="flights">Flights</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-  </div>
-
-  <div class="content" id="content"></div>
-</div>
-
-<script>
-let tab = "all";
-
-const GEMINI_KEY = "AIzaSyD90LLYotrBiOhaM6YUecNVauYosFDL5kI";
-const UNSPLASH = "1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT = "AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
-const qHome = document.getElementById("qHome");
-const qTop = document.getElementById("qTop");
-const home = document.getElementById("home");
-const results = document.getElementById("results");
-const content = document.getElementById("content");
-
-qHome.onkeydown = e => e.key === "Enter" && enter();
-qTop.onkeydown = e => e.key === "Enter" && search();
-
-document.querySelectorAll(".tab").forEach(t => {
-  t.onclick = () => {
-    tab = t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x => x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
-});
-
-function enter(){
-  if(!qHome.value) return;
-  home.style.display = "none";
-  results.style.display = "block";
-  qTop.value = qHome.value;
-  search();
-}
-
-function goHome(){
-  results.style.display = "none";
-  home.style.display = "flex";
-}
-
-function search(){
-  const q = qTop.value;
-  content.innerHTML = "";
-
-  if(tab === "ai"){
-    content.innerHTML = "<div id='aiBox'>Thinking…</div>";
-
-    fetch(
-      "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + GEMINI_KEY,
-      {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          contents: [{ parts: [{ text: q }] }]
-        })
-      }
-    )
-    .then(r => r.json())
-    .then(d => {
-      document.getElementById("aiBox").innerText =
-        d.candidates?.[0]?.content?.parts?.[0]?.text || "No response.";
-    })
-    .catch(() => {
-      document.getElementById("aiBox").innerText = "Error contacting AI.";
-    });
-
-    return;
-  }
-
-  const enc = encodeURIComponent(q);
-
-  if(tab === "all"){
-    content.innerHTML =
-      "<div class='engine' onclick=\"window.open('https://www.bing.com/search?q="+enc+"')\"><img src='https://www.bing.com/favicon.ico'> Bing</div>" +
-      "<div class='engine' onclick=\"window.open('https://duckduckgo.com/?q="+enc+"')\"><img src='https://duckduckgo.com/favicon.ico'> DuckDuckGo</div>";
-  }
-
-  if(tab === "flights"){
-    content.innerHTML = "<iframe class='flight-frame' src='https://www.flightradar24.com/simple'></iframe>";
-  }
-
-  if(tab === "images"){
-    fetch("https://api.unsplash.com/search/photos?query="+enc+"&per_page=18&client_id="+UNSPLASH)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML="<div class='images'>"+d.results.map(i=>"<img src='"+i.urls.small+"'>").join("")+"</div>";
-      });
-  }
-
-  if(tab === "videos"){
-    fetch("https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q="+enc+"&key="+YT)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML="<div class='videos'>"+d.items.map(v=>
-          "<div><a target='_blank' href='https://youtube.com/watch?v="+v.id.videoId+"'><img src='"+v.snippet.thumbnails.medium.url+"'></a><div class='video-title'>"+v.snippet.title+"</div></div>"
-        ).join("")+"</div>";
-      });
-  }
-
-  if(tab === "news"){
-    content.innerHTML =
-      "<div class='news-btn' onclick=\"window.open('https://news.google.com/search?q="+enc+"')\"><img src='https://static.vecteezy.com/system/resources/previews/022/613/029/large_2x/google-news-icon-logo-symbol-free-png.png'>Google News</div>";
-  }
-}
-</script>
-
-</body>
-</html>
+  padding: 12px 18
