--- a/index.html
+++ b/index.html
@@ -12,26 +12,20 @@
 <style>
 html,body{
   margin:0;padding:0;
-  width:100%;height:100%;
+  width:100%;
+  min-height:100%;
   font-family:Arial,sans-serif;
-  background:#f5f5f5;
 }
 
-/* DESKTOP: TWO SANTAS + GRADIENT FILL */
+/* BACKGROUND */
 body{
-  min-height:100vh;
   background:
-    linear-gradient(to right, #f8fbff 0%, #f8fbff 50%, #f8fbff 100%),
-    url('Santa.png') left top / 50% 100% no-repeat,
-    url('Santa.png') right top / 50% 100% no-repeat;
+    url('Santa.png') left top / 50% 100% repeat-y,
+    url('Santa.png') right top / 50% 100% repeat-y;
 }
-
-/* MOBILE: ONE SANTA + COLOR FILL */
 @media(max-width:768px){
   body{
-    background:
-      linear-gradient(#f8fbff,#f8fbff),
-      url('Santa.png') center top / contain no-repeat;
+    background:url('Santa.png') center top / contain repeat-y;
   }
 }
 
@@ -55,15 +49,17 @@ body{
   max-width:500px;
 }
 
-/* LOGO */
+/* LOGO FIX */
 .logo{
   font-size:64px;
   font-weight:bold;
-  letter-spacing:-1px;
   margin-bottom:20px;
+  white-space:nowrap;
+  letter-spacing:-2px;
 }
+.logo span{display:inline-block}
 .logo span.b{color:#4285f4}
-.logo span.r{color:#ea4335}
+.logo span.o{color:#ff9800} /* ORANGE */
 .logo span.y{color:#fbbc05}
 .logo span.g{color:#34a853}
 
@@ -71,8 +67,8 @@ body{
 #results{
   display:none;
   padding:15px;
-  max-width:1100px;
-  margin:0 auto;
+  max-width:1200px;
+  margin:30px auto;
   background:rgba(255,255,255,0.85);
   border-radius:16px;
 }
@@ -136,7 +132,15 @@ body{
   border-radius:8px;
 }
 
-/* MOBILE UI */
+/* FLIGHTS */
+.flight-map{
+  width:100%;
+  height:600px;
+  border:none;
+  border-radius:12px;
+}
+
+/* MOBILE */
 @media(max-width:768px){
   .logo{font-size:42px}
   #site input,
@@ -145,6 +149,7 @@ body{
     padding:10px 14px;
   }
   .engine{font-size:17px}
+  .flight-map{height:450px}
 }
 </style>
 </head>
@@ -154,9 +159,7 @@ body{
 <!-- HOME -->
 <div id="site">
   <div class="logo">
-    <span class="b">S</span><span class="r">e</span><span class="y">a</span><span class="b">r</span>
-    <span class="g">c</span><span class="r">h</span>
-    <span class="b">m</span><span class="y">a</span><span class="g">s</span>
+    <span class="b">S</span><span class="o">e</span><span class="y">a</span><span class="b">r</span><span class="g">c</span><span class="o">h</span><span class="b">m</span><span class="y">a</span><span class="g">s</span>
   </div>
   <input id="siteSearch" placeholder="Search the web" onkeydown="siteSearchEnter(event)">
 </div>
@@ -166,9 +169,7 @@ body{
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
     <div class="logo" style="font-size:26px">
-      <span class="b">S</span><span class="r">e</span><span class="y">a</span><span class="b">r</span>
-      <span class="g">c</span><span class="r">h</span>
-      <span class="b">m</span><span class="y">a</span><span class="g">s</span>
+      <span class="b">S</span><span class="o">e</span><span class="y">a</span><span class="b">r</span><span class="g">c</span><span class="o">h</span><span class="b">m</span><span class="y">a</span><span class="g">s</span>
     </div>
     <input id="qTop" placeholder="Search again">
   </div>
@@ -177,6 +178,7 @@ body{
     <div class="tab active" onclick="setTab('all')">All</div>
     <div class="tab" onclick="setTab('images')">Images</div>
     <div class="tab" onclick="setTab('videos')">Videos</div>
+    <div class="tab" onclick="setTab('flights')">Flights</div>
     <div class="tab" onclick="setTab('news')">News</div>
   </div>
 
@@ -263,6 +265,14 @@ function search(){
       <div class="engine" onclick="window.open('https://www.youtube.com/results?search_query=${enc}')">
         <img src="https://www.youtube.com/favicon.ico"> YouTube
       </div>`;
+  }
+
+  if(tab==="flights"){
+    content.innerHTML=`
+      <iframe class="flight-map"
+        src="https://www.flightradar24.com/simple"
+        loading="lazy">
+      </iframe>`;
   }
 
   if(tab==="news"){
