--- a/index.html
+++ b/index.html
@@ -1,225 +1,56 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>🌲Searchmas🎅</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-<link rel="icon" href="favicon.png">
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#1a73e8">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="Searchmas">
-<link rel="apple-touch-icon" href="favicon.ico">
+<title>Searchmas – Compatibility Mode</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
-  background:
-    url('Santa.png') left center / 50% 100vh no-repeat,
-    url('Santa.png') right center / 50% 100vh no-repeat;
+  font-family:Arial,sans-serif;
+  background:#f5f5f5;
+  text-align:center;
+  padding:40px;
 }
-
-/* MOBILE: single centered Santa */
-@media (max-width:768px){
-  body {
-    background: url('Santa.png') center center / cover no-repeat;
-  }
+.box{
+  background:#fff;
+  padding:25px;
+  border-radius:10px;
+  max-width:420px;
+  margin:auto;
 }
-
-/* HOME */
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-.logo{font-size:clamp(48px,10vw,80px);font-weight:bold;text-align:center;}
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
-
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
-
-/* RESULTS */
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-.back{cursor:pointer;font-size:22px;margin-bottom:8px;}
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-/* WHITE FLOATING CARDS - Only All, News, Flights */
-.card{background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,.08);color:#000;text-decoration:none;display:flex;align-items:center;gap:12px;}
-.card img{width:28px;height:28px;}
-
-/* GRID FOR IMAGES & VIDEOS - Normal size */
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{
-  width:100%;
-  aspect-ratio:16/9;
-  object-fit:cover;
-  border-radius:8px;
-  display:block;
-  max-height:250px;
-}
-
-/* MOBILE ADJUSTMENTS */
-@media(max-width:480px){
-  .search-box{width:95%;}
-  .grid{grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:8px;}
-  .grid img{max-height:180px;}
+button{
+  padding:12px 20px;
+  font-size:16px;
+  border:none;
+  border-radius:6px;
+  background:#1a73e8;
+  color:#fff;
+  cursor:pointer;
 }
 </style>
-</head>
-
-<body>
-<div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
-    <span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
-</div>
-
-<div id="results">
-  <div class="topbar">
-    <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
-  </div>
-
-  <div class="tabs">
-    <div class="tab" data-tab="ai">AI Mode</div>
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-    <div class="tab" data-tab="flights">Flights</div>
-  </div>
-
-  <div id="content"></div>
-</div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
-let tab="all";
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
-
-/* INITIAL LOAD */
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-if(startQ && startQ.trim()){
-  showResults(startQ);
-}else{
-  history.replaceState({}, "", location.pathname);
-}
-
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
-  if(!q) return;
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
-}
-
-qTop.onkeydown=e=>{
-  if(e.key==="Enter"){
-    const q=qTop.value.trim();
-    if(!q) return;
-    history.pushState({}, "", "?q="+encodeURIComponent(q));
-    search();
-  }
-};
-
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    if(tab==="ai"){
-      location.href="https://gemini.google.com";
-      return;
-    }
-    search();
-  };
-});
-
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  search();
-}
-
-function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
-}
-
-function card(icon,text,url){
-  return `<a class="card" href="${url}" target="_blank">
-    ${icon?`<img src="${icon}">`:''}<span>${text}</span>
-  </a>`;
-}
-
-function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
-  const enc=encodeURIComponent(q);
-  content.innerHTML="";
-
-  if(tab==="all"){
-    content.innerHTML=
-      card("https://www.google.com/favicon.ico","Google",`https://google.com/search?q=${enc}`)+
-      card("https://www.bing.com/favicon.ico","Bing",`https://bing.com/search?q=${enc}`)+
-      card("https://duckduckgo.com/favicon.ico","DuckDuckGo",`https://duckduckgo.com/?q=${enc}`)+
-      card("https://search.yahoo.com/favicon.ico","Yahoo",`https://search.yahoo.com/search?p=${enc}`);
-  }
-
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{"Authorization":"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${
-        d.results.map(i=>`<img src="${i.urls.regular}">`).join("")
-      }</div>`;
-    });
-  }
-
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${
-        d.items.map(v=>`<a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank"><img src="${v.snippet.thumbnails.high.url}"></a>`).join("")
-      }</div>`;
-    });
-  }
-
-  if(tab==="news"){
-    content.innerHTML=
-      card("https://www.google.com/favicon.ico","Google News",`https://news.google.com/search?q=${enc}`)+
-      card("https://www.bing.com/favicon.ico","Bing News",`https://www.bing.com/news/search?q=${enc}`);
-  }
-
-  if(tab==="flights"){
-    content.innerHTML=card(null,"Flightradar24","https://www.flightradar24.com");
-  }
+/* LAST-RESORT REDIRECT */
+function goDuck(){
+  window.location.href = "https://duckduckgo.com";
 }
 </script>
+
+</head>
+<body>
+
+<div class="box">
+  <h2>Searchmas Compatibility Mode</h2>
+  <p>Your browser is very old (Internet Explorer).</p>
+  <p>Searchmas may not work correctly here.</p>
+
+  <p>
+    You can continue using a safe search engine:
+  </p>
+
+  <button onclick="goDuck()">Go to DuckDuckGo</button>
+</div>
+
 </body>
 </html>
