--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -180,13 +181,44 @@ function search(){
   const enc=encodeURIComponent(q);
   content.innerHTML="";
 
+  
   if(tab==="all"){
-    content.innerHTML=
-      card("https://www.google.com/favicon.ico","Google",`https://google.com/search?q=${enc}`)+
-      card("https://www.bing.com/favicon.ico","Bing",`https://bing.com/search?q=${enc}`)+
-      card("https://duckduckgo.com/favicon.ico","DuckDuckGo",`https://duckduckgo.com/?q=${enc}`)+
-      card("https://search.yahoo.com/favicon.ico","Yahoo",`https://search.yahoo.com/search?p=${enc}`);
-  }
+  content.innerHTML = card(null,"Loading live results…","#");
+
+  Promise.all([
+    fetch(`https://api.duckduckgo.com/?q=${enc}&format=json&no_html=1&no_redirect=1`)
+      .then(r=>r.json()),
+    fetch(`https://en.wikipedia.org/api/rest_v1/page/summary/${enc}`)
+      .then(r=>r.json())
+      .catch(()=>null)
+  ]).then(([ddg, wiki])=>{
+    content.innerHTML = "";
+
+    if(wiki && wiki.title){
+      content.innerHTML += card(
+        "https://wikipedia.org/favicon.ico",
+        wiki.title + " — " + wiki.extract,
+        wiki.content_urls?.desktop?.page || "#"
+      );
+    }
+
+    ddg.RelatedTopics?.slice(0,8).forEach(t=>{
+      if(t.Text && t.FirstURL){
+        content.innerHTML += card(
+          "https://duckduckgo.com/favicon.ico",
+          t.Text,
+          t.FirstURL
+        );
+      }
+    });
+
+    if(!content.innerHTML){
+      content.innerHTML = card(null,"No live results found","#");
+    }
+  });
+}
+
+
 
   if(tab==="images"){
     fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
